MM-15403 Fixes highlight for date separators and new messages line on post hover (#2806)
* MM-15403 Fixes hightlight for date separators and new messages line on post hover

  * Collapsing dateseparator and new messages line so they are overlapped with posts.
    Adding new classes based on the next and previous postID if it is a collpased element
    so we can add padding accordingly

* update compact styles

* * Exclude jquery magic from adding highlight classes for virt list
* Add tests
* Update react wondow hash

--- a/sass/layout/_post.scss
+++ b/sass/layout/_post.scss
@@ -739,7 +739,7 @@
 .post {
     @include legacy-pie-clearfix;
     max-width: 100%;
-    padding: 8px .5em 0 1.5em;
+    padding: 8px .5em 0 1.5em; // If this needs to be changed then .post-row__padding needs to be adjusted accordingly
     position: relative;
     word-wrap: break-word;
 
@@ -2066,4 +2066,34 @@
     right: 0;
     top: 0;
     width: 0;
+}
+
+.post-row__padding {
+    &.bottom > div:not(.post) {
+        padding-bottom: 1em;
+    }
+    &.top > div:not(.post) {
+        padding-top: 1em;
+    }
+
+    &.top .post {
+        padding-top: 22px; // this is based off of 8px padding for post + 1em
+    }
+
+    &.bottom .post {
+        padding-bottom: 1em;
+    }
+
+    .post.same--root.same--user {
+        padding: 0 0.5em 1em 1.5em;
+    }
+}
+
+.post-list__dynamic {
+    .date-separator, .new-separator {
+        z-index: 1;
+        height: 0px;
+        margin-bottom: 1em;
+        margin-top: -1em;
+    }
 }
